tests/invalid/Cast_Invalid_1.whiley
type boolrec is {bool b}

public export method test():
    boolrec r = {b: true}
    assume (bool) r.b